6/10/06 (asl)
  * Fix for PPC by Mark Rodenkirch
  * Added -nolpcount command line switch (by forzles)
  * Bugfix for M->maxDataSize was not setup correctly (by forzles)

6/9/06 (asl)
  * Incorporated Cygwin compatibility fix by R. Backstrom
  * Workaround of GMP 4.2 bug - use GMP_BUG switch in makefile.
    (http://swox.com/list-archives/gmp-bugs/2006-May/000475.html)

6/8/06 (frmky)
  * Removed unused readRawS32() and writeRawS32() prototypes from ggnfs.h
  * Incorporate the patch by forzles to fix the odd exponent error
  * Silence the frequent, harmless warnings in the lattice sieve 
  * Change the extension of the plots from jpg to png to reflect that
    they are actually in PNG format

05/24/06 (BRG)
  * Updated VC++ version 8 build project to use GMP-4.2.1

05/13/06 (asl)
  * Some compartibility changes.
  * Merged latest patches by G.W. Reynolds & tested under mingw32.

03/16/06 (BRG)
  * Updated VC++ version 8 build project to include matrix save
    routines and to work with my current VC++ build for GMP 4.1.4

03/11/06 (asl)
  * Ported & tested matrix save\resume routines under mingw32.
    Maybe this will also work while compiled by Visual C++. ;)

03/10/06 (asl)
  * Added matrix save\resume routine by G.W. Reynolds.

02/02/06 (relf)
  * NEED_ASPRINTF, NEED_GETLINE are replaced with GGNFS_GNU_MISSING
  which is now defined in ggnfs.h
  * fixed all affected headers
  * WARNING: if GNU extensions are used, <stdio.h> should not be included directly
  but through ggnfs.h or at least after it

12/12/05 (trilliwig)
  * Header file fixes for Linux.

12/02/05 (relf)
  * matbuild-tpie.c merged with matbuild.c
  * matbuild.c minor cleanups

12/01/05 (relf)
  * file size/offset types changed to off_t
  * ULL_NO_UL is defined for 32-bit platforms
  * minor cleanups in mpz-ull.c
  * rel_list members became unsigned
  * readRawS32/writeRawS32 definition moved to ggnfs.h

11/16/05 (aSL)
  * Some factLat.pl changes by Mark Rodenkirch

11/04/05 (relf)