@@ -1,4 +1,4 @@
-VERSION=0.77.1-20060513
+VERSION=0.77.1-20060707
 THISDIR=branch_0
 
 TOOLSPREFIX=
